<resources>
    <string name="app_name">Sporify</string>
    <string name="home">Home</string>
    <string name="playlist">Play List</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="play">Play</string>
    <string name="dark_mode_mix">Dark Mode Mix</string>
    <string name="andy_2025">Andy • 2025</string>
    <string name="todo">TODO</string>
    <string name="album_art_desc">Descripcion album</string>
    <string name="name">Nombre</string>
    <string name="alias">\@andybeats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subtextLogin">Inicia sesión para continuar</string>
    <string name="LogInText">Iniciar sesión</string>
    <string name="contrasenaOlvidadaText">¿Has olvidado la contraseña?</string>
    <string name="crearCuentaText">Crear cuenta</string>
    <string name="emailText">Correo electrónico</string>
    <string name="passwordText">Contraseña</string>
    <string name="repeatPasswordText">Repetir contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="haveAccount">¿Ya tienes cuenta?</string>
    <string name="player">Player</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="reg_strate">Regístrate</string>
    <string name="artista">Artista</string>
    <string name="t_tulo">Título</string>
    <string name="song_title">Song Title</string>
    <string name="artist_name">Artist name</string>
    <string name="change_photo">Cambiar foto"</string> />
</resources>