<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".RegisterFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- LOGO -->
            <ImageView
                android:id="@+id/imgLogoRegister"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="100dp"
                android:src="@mipmap/logo_img_round"
                android:contentDescription="@string/app_name" />

            <!-- TÍTULO -->
            <TextView
                android:id="@+id/txtTitleRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/crearCuentaText"
                android:textColor="@color/colorOnBackground"
                android:textAppearance="?attr/textAppearanceHeadlineMedium" />

            <!-- NOMBRE -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:boxBackgroundColor="@color/colorSurface"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/colorOnSurface"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorOnSurface"
                    android:textColorHint="@color/colorOnSurface" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- EMAIL -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorSurface"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/colorOnSurface"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailText"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorOnSurface"
                    android:textColorHint="@color/colorOnSurface" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- CONTRASEÑA -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorSurface"
                app:boxStrokeColor="@color/colorPrimary"
                app:passwordToggleEnabled="true"
                app:hintTextColor="@color/colorOnSurface"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordText"
                    android:inputType="textPassword"
                    android:textColor="@color/colorOnSurface"
                    android:textColorHint="@color/colorOnSurface" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- REPETIR CONTRASEÑA -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorSurface"
                app:boxStrokeColor="@color/colorPrimary"
                app:passwordToggleEnabled="true"
                app:hintTextColor="@color/colorOnSurface"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repeatPasswordText"
                    android:inputType="textPassword"
                    android:textColor="@color/colorOnSurface"
                    android:textColorHint="@color/colorOnSurface" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- BOTÓN REGISTRARSE -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/crear_cuenta"
                app:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorOnPrimary" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>
