<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".LoginFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- LOGO -->
            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="100dp"
                android:src="@mipmap/logo_img_round"
                android:contentDescription="@string/app_name"/>

            <!-- EMAIL -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                app:boxBackgroundColor="@color/colorSurface"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/colorOnSurface"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Correo electrónico"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorOnSurface"
                    android:textColorHint="@color/colorOnSurface" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- PASSWORD -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorSurface"
                app:boxStrokeColor="@color/colorPrimary"
                app:passwordToggleEnabled="true"
                app:hintTextColor="@color/colorOnSurface"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Contraseña"
                    android:inputType="textPassword"
                    android:textColor="@color/colorOnSurface"
                    android:textColorHint="@color/colorOnSurface" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- BOTÓN LOGIN -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/LogInText"
                app:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorOnPrimary" />

            <!-- OLVIDASTE CONTRASEÑA -->
            <TextView
                android:id="@+id/btnForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/contrasenaOlvidadaText"
                android:textColor="@color/colorSecondary"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <!-- REGISTRO -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="24dp">

                <TextView
                    android:text="¿No tienes cuenta?"
                    android:textColor="@color/colorOnSurface"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/btnRegister"
                    android:layout_marginStart="6dp"
                    android:text="Regístrate"
                    android:textColor="@color/colorSecondary"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>
